Use `@DataMongoTest` and  `@Testcontainers` annotations in `TaskServiceTests`